fixing gap on playlist page nav

--- a/PointNemo/music/css/sonar-home-screen.scss
+++ b/PointNemo/music/css/sonar-home-screen.scss
@@ -923,7 +923,7 @@ span.page-title-text{
 nav.playlist-page-global-navigation{
     display: flex;
     flex-direction: row;
-    gap: 16px;
+    gap: 10px;
     align-items: center;
     justify-content: space-around;
 }
